compiler/testData/cli/metadata/inheritorOfExpectSealedClass.out
compiler/testData/cli/metadata/inheritorOfExpectSealedClass/common-2.kt:1:21: error: 'actual class Base : Any' has no corresponding expected declaration
actual sealed class Base
                    ^
COMPILATION_ERROR
